force-app/main/default/objects/Contract_Agreement__c/Contract_Agreement__c.object-meta.xml
<CustomObject>
    <label>Contract Agreement</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>