force-app/main/default/objects/Contract_Agreement__c/fields/Asset_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Ownership_Type__c</fullName>
    <label>Asset Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Contract Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>