force-app/main/default/objects/Contract_Agreement__c/fields/Asset_types_selected__c.field-meta.xml
<CustomField>
    <fullName>Asset_types_selected__c</fullName>
    <formula>TEXT(Asset_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset types selected</label>
    <type>Text</type>
</CustomField>