force-app/main/default/objects/Contract_Agreement__c/fields/Contract_Cost__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cost__c</fullName>
    <label>Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>