force-app/main/default/objects/Contract_Agreement__c/fields/Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration__c</fullName>
    <description>Min 6 months and max 60 months</description>
    <inlineHelpText>Please enter duration in months</inlineHelpText>
    <label>Contract Duration (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>