force-app/main/default/objects/Contract_Agreement__c/fields/Contract_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Email__c</fullName>
    <label>Contract Owner Email</label>
    <type>Email</type>
</CustomField>