force-app/main/default/objects/Contract_Agreement__c/fields/Contract_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Name__c</fullName>
    <label>Contract Owner Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>