force-app/main/default/objects/Contract_Agreement__c/fields/Contract_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Phone__c</fullName>
    <label>Contract Owner Phone</label>
    <type>Phone</type>
</CustomField>