force-app/main/default/objects/Contract_Agreement__c/fields/Exhausted_Budget__c.field-meta.xml
<CustomField>
    <fullName>Exhausted_Budget__c</fullName>
    <formula>IF( Start_Date__c &gt;  TODAY() , 0 , Contract_Cost__c - ((Contract_Cost__c  /  Contract_Duration__c) * (MONTH( End_Date__c ) + (12*(YEAR( End_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))))</formula>
    <label>Exhausted Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>