force-app/main/default/objects/Contract_Agreement__c/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract</label>
    <referenceTo>Contract_Agreement__c</referenceTo>
    <relationshipLabel>Parent Contract Agreements</relationshipLabel>
    <relationshipName>Contract_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>