force-app/main/default/objects/Contract_Agreement__c/fields/RecordTypeIdReferenceField__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIdReferenceField__c</fullName>
    <label>RecordTypeIdReferenceField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>