force-app/main/default/objects/Contract_Agreement__c/fields/Remaining_Budget_Percent__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget_Percent__c</fullName>
    <formula>Remaining_Budget__c  /  Contract_Cost__c</formula>
    <label>Remaining Budget Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>