force-app/main/default/objects/Contract_Agreement__c/fields/Renewable_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Contract__c</fullName>
    <label>Renewable Contract?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>