force-app/main/default/objects/Contract_Agreement__c/fields/Renewal_Required__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Required__c</fullName>
    <description>Used in Flow to calculate the Contract End Date</description>
    <formula>IF(  End_Date__c - TODAY()&lt;=90 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Required?</label>
    <type>Checkbox</type>
</CustomField>