force-app/main/default/objects/Contract_Agreement__c/validationRules/Child_Contract_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Child_Contract_Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(Parent_Contract__c ) ,Start_Date__c &lt;  Parent_Contract__r.End_Date__c )</errorConditionFormula>
    <errorDisplayField>Asset_Ownership_Type__c</errorDisplayField>
    <errorMessage>Contract Start date must be Greater than Expiration/End date of the Original Contracts.</errorMessage>
</ValidationRule>