force-app/main/default/objects/Contract_Agreement__c/validationRules/Contract_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Name_Validation_Rule</fullName>
    <active>true</active>
    <description>Contract name should be unique always.</description>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Contract_Agreement__c.Fields.Name , 
        $ObjectType.Contract_Agreement__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Contract with this name already exist.</errorMessage>
</ValidationRule>