force-app/main/default/objects/Contract_Agreement__c/validationRules/Rule_for_Asset_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_Asset_Type</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
INCLUDES( Vendor__r.Type__c , &apos;Hardware&apos;) &amp;&amp; TEXT(Asset_Type__c) = &apos;Hardware&apos;,
INCLUDES( Vendor__r.Type__c , &apos;Software&apos;) &amp;&amp; TEXT(Asset_Type__c) = &apos;Software&apos;,
INCLUDES( Vendor__r.Type__c , &apos;Professional Services&apos;) &amp;&amp; TEXT(Asset_Type__c) = &apos;Professional Services&apos;))</errorConditionFormula>
    <errorDisplayField>Asset_Type__c</errorDisplayField>
    <errorMessage>This type of Assets are not provided by this Vendor. Please see Vendor Details to know the  types of Assets they are providing.</errorMessage>
</ValidationRule>