force-app/main/default/objects/Contract_Agreement__c/validationRules/Rule_for_contract_cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_contract_cost</fullName>
    <active>true</active>
    <description>Total cost to company shoild be greater than 0.</description>
    <errorConditionFormula>Contract_Cost__c  &lt;= 0  ||  ISBLANK(Contract_Cost__c) =True</errorConditionFormula>
    <errorDisplayField>Contract_Cost__c</errorDisplayField>
    <errorMessage>Please enter Contract Cost value.</errorMessage>
</ValidationRule>