force-app/main/default/objects/Contract_Agreement__c/validationRules/Validation_Rule_for_Start_date_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_for_Start_date_field</fullName>
    <active>true</active>
    <description>This rule is created to restrict user from entering past date in the start date field.</description>
    <errorConditionFormula>TODAY() &gt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Do not enter past date in the field.</errorMessage>
</ValidationRule>