force-app/main/default/objects/Contract_Agreement__c/validationRules/Validation_Rule_on_Contract_duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_on_Contract_duration</fullName>
    <active>true</active>
    <description>User must enter the contract duration min 6 months to max 60 months.</description>
    <errorConditionFormula>OR(
Contract_Duration__c  &lt; 6,
Contract_Duration__c  &gt;  60
)</errorConditionFormula>
    <errorDisplayField>Contract_Duration__c</errorDisplayField>
    <errorMessage>The Contract duration must be between 6 to 60 months.</errorMessage>
</ValidationRule>