force-app/main/default/objects/Contract_Agreement__c/listViews/Contract_Expiration_within_90_days.listView-meta.xml
<ListView>
    <fullName>Contract_Expiration_within_90_days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>Contract Expiration within 90 days</label>
</ListView>