force-app/main/default/objects/Contract_Agreement__c/listViews/Expired_Agreement.listView-meta.xml
<ListView>
    <fullName>Expired_Agreement</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Agreement</label>
</ListView>