force-app/main/default/objects/Contract_Agreement__c/listViews/Lease_Assets.listView-meta.xml
<ListView>
    <fullName>Lease_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Ownership_Type__c</field>
        <operation>equals</operation>
        <value>Lease</value>
    </filters>
    <label>Lease Assets</label>
</ListView>