force-app/main/default/objects/Contract_Agreement__c/listViews/License_Assets.listView-meta.xml
<ListView>
    <fullName>License_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Ownership_Type__c</field>
        <operation>equals</operation>
        <value>License</value>
    </filters>
    <label>License Assets</label>
</ListView>