force-app/main/default/objects/Contract_Agreement__c/listViews/New_Aggrement.listView-meta.xml
<ListView>
    <fullName>New_Aggrement</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Aggrement</label>
</ListView>