force-app/main/default/objects/Contract_Agreement__c/listViews/Ongoing_Agreement.listView-meta.xml
<ListView>
    <fullName>Ongoing_Agreement</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <label>Ongoing Agreement</label>
</ListView>