force-app/main/default/objects/Contract_Agreement__c/listViews/Purchased_Assets.listView-meta.xml
<ListView>
    <fullName>Purchased_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Ownership_Type__c</field>
        <operation>equals</operation>
        <value>Own</value>
    </filters>
    <label>Purchased Assets</label>
</ListView>