force-app/main/default/objects/Contract_Agreement__c/listViews/Remaining_Budget_less_than_10.listView-meta.xml
<ListView>
    <fullName>Remaining_Budget_less_than_10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Budget_Percent__c</field>
        <operation>lessThan</operation>
        <value>10.0</value>
    </filters>
    <label>Remaining Budget less than 10%</label>
</ListView>