force-app/main/default/objects/Contract_Agreement__c/listViews/Renewed_Contract.listView-meta.xml
<ListView>
    <fullName>Renewed_Contract</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Renewed</value>
    </filters>
    <label>Renewed Contract</label>
</ListView>