force-app/main/default/objects/Contract_Agreement__c/listViews/Rent_Assets.listView-meta.xml
<ListView>
    <fullName>Rent_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Ownership_Type__c</field>
        <operation>equals</operation>
        <value>Rent</value>
    </filters>
    <label>Rent Assets</label>
</ListView>